# gptconomics

./: .gitignore  README.md  pyproject.toml  requirements.txt
gptconomics/: default_config.ini  main.py  struct_conv.py
