[project]
name = "gptconomics"
version = "0.1.0"
description = ""
authors = [
    {name = "Enrico"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tiktoken (>=0.9.0,<0.10.0)"
]

[tool.poetry.scripts]
gptconomics = "gptconomics.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
